@@ -39,3 +39,9 @@
 /* Define to 1 if your processor stores words with the most significant byte
    first (like Motorola and SPARC, unlike Intel and VAX). */
 #undef WORDS_BIGENDIAN
+
+/* enable c99 features */
+#undef _GLIBCPP_USE_C99
+
+/* enable libstdc++ checking */
+#undef _GLIBCXX_DEBUG
